--- a/app/src/main/res/layout/activity_chatting.xml
+++ b/app/src/main/res/layout/activity_chatting.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/chatt_color"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.example.kimjh.kakaotabpj.ChattingActivity">
+    tools:context=".chatting.ChattingActivity">
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
