--- a/app/src/main/res/layout/activity_profile2.xml
+++ b/app/src/main/res/layout/activity_profile2.xml
@@ -29,7 +29,8 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/name_card">
+        android:layout_below="@id/name_card"
+        android:id="@+id/view3">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -38,4 +39,12 @@
             android:padding="10dp"
             android:id="@+id/text_profile" />
     </android.support.v7.widget.CardView>
+
+    <com.example.kimjh.kakaotabpj.setting.RoundedImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/image_icon"
+        android:layout_below="@+id/view3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
